# QuitSmoke/Controllers/Entities/UpdatePoint.cs
@@ -1,0 +1,11 @@
+using System;
+using System.Collections;
+
+namespace QuitSmokeWebAPI.Controllers.Entity
+{
+    public class UpdatePoint
+    {
+        public string smokerNodeName { get; set; }
+        public int point { get; set; }
+    }
+}
